[package]
name = "rumage"
version = "0.5.7"
edition = "2021"

license = "MIT"
description = "A simple framework for making simple markdown sites"
repository = "https://github.com/notangelmario/rumage"
documentation = "https://docs.rs/rumage"
readme = "README.md"
keywords = ["markdown", "static-site", "blog", "website"]
categories = ["web-programming"]

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
comrak = "0.14.0"
gray_matter = "0.2.4"
serde = { version = "1.0.130", features = ["derive"] }
walkdir = "2.3.2"
